# retail-forecasting-benchmark

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  dockerignore  pyproject.toml
.github/workflows/: ci.yml
artifacts/: lightgbm-tweedie_features.parquet
dashboard/: Home.py
dashboard/pages/: 1_Benchmark_Results.py  2_Prediction_Explorer.py
data/: README.md
docs/: methodology.md  results.md
notebooks/: 01_eda_overview.py  README.md
scripts/: build_track_daily_sample.py  download_data.py  run_holt_winters.py  run_lightgbm_phase31.py  run_lightgbm_phase32.py  run_lightgbm_phase33.py  run_naive_baselines.py  train_for_serving.py
src/forecasting/: __init__.py  config.py
src/forecasting/data/: aggregate.py  load.py  preprocess.py  sampling.py  splits.py
src/forecasting/evaluation/: metrics.py  runner.py  segments.py
src/forecasting/features/: calendar.py  event_features.py  hierarchical_features.py  lags.py  promo.py  promo_track.py  stockout_correction.py
src/forecasting/models/: base.py  holt_winters.py  lightgbm_model.py  naive.py
src/forecasting/serving/: api.py  feature_store.py  persistence.py
tests/: test_aggregate.py  test_api.py  test_calendar.py  test_dashboard.py  test_event_features.py  test_hierarchical_features.py  test_holt_winters.py  test_lags.py  test_lightgbm_model.py  test_lightgbm_phase33.py  test_load.py  test_metrics.py  test_naive.py  test_preprocess.py  test_promo.py  test_promo_track.py  test_runner.py  test_segments.py  test_serving_infrastructure.py  test_splits.py  test_stockout_correction.py
tests/data/: test_aggregate_daily.py  test_sampling.py
tests/evaluation/: test_runner.py
