[project]
name = "forecasting"
version = "0.1.0"
description = "Multi-level retail demand forecasting benchmark"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Matthieu", email = "giovanetti.matthieu@gmail.com"},
]

dependencies = [
    # Data manipulation
    "pandas>=2.2.0",
    "polars>=1.0.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",
    # Statistical forecasting
    "statsforecast>=1.7.0",
    "statsmodels>=0.14.0",
    # ML
    "scikit-learn>=1.4.0",
    "lightgbm>=4.3.0",
    "optuna>=3.6.0",
    # Tracking
    "mlflow>=2.11.0",
    # Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.20.0",
    # Config
    "pyyaml>=6.0",
    "hydra-core>=1.3.0",
    # Utilities
    "tqdm>=4.66.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
deep = [
    "darts>=0.29.0",
    "torch>=2.2.0",
]
hierarchical = [
    "hierarchicalforecast>=0.4.0",
]
api = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.6.0",
]
dashboard = [
    "streamlit>=1.33.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff==0.15.12",  # exact pin to avoid CI/local format drift
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forecasting"]

# ----- Ruff configuration -----
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]  # Test functions can have non-conforming names
"notebooks/*" = ["E402"]       # Allow imports not at top in notebooks
"src/forecasting/models/lightgbm_model.py" = [
    "N806",   # ML convention: X for feature matrix, y for target
    "SIM108", # if/else with comments is more readable than a ternary
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ----- Pytest configuration -----
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=forecasting --cov-report=term-missing"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# ----- Mypy configuration -----
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, tighten later
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ----- Coverage configuration -----
[tool.coverage.run]
source = ["src/forecasting"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
